# CloudDash-TUI-for-Cloudflare

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.ps1  setup.sh
app/: __init__.py  api_client.py  logger.py  query_history.py
ui/: __init__.py  app.py  style.tcss
ui/screens/: __init__.py  d1_manager.py  dashboard.py  r2_explorer.py
ui/widgets/: __init__.py
